Refactor i18n classes and properties files

--- a/src/main/resources/bundles/components_de.properties
+++ b/src/main/resources/bundles/components_de.properties
@@ -1,103 +1,103 @@
 # General Strings
 stage-title=Autoverwaltung
 
+# Menubar Strings
+menubar-view-file=_Datei
+menubar-operation-cars=Autos
+menubar-operation-customers=Kunden
+menubar-operation-employees=Mitarbeiter
+menubar-operation-rentals=Vermietungen
+menubar-operation-close=Schließen
+menubar-view-edit=_Bearbeiten
+menubar-operation-new=Neu
+menubar-operation-edit=Bearbeiten
+menubar-operation-delete=Löschen
+menubar-operation-rent=Vermieten
+menubar-view-help=_Hilfe
+menubar-operation-about=Über
+
+# Search Strings
+search-combobox-field-text=Feld auswählen
+search-combobox-comparator-text=Operator auswählen
+search-combobox-equals==
+search-combobox-greater=>
+search-combobox-smaller=<
+search-combobox-like=LIKE
+search-textfield-text=Suchen...
+
 # Button Strings
+button-search-label=Suchen
+button-clear-filter-label=Filter löschen
 button-new-label=Anlegen...
 button-edit-label=Bearbeiten...
 button-delete-label=Löschen...
 button-rent-label=Vermieten...
 button-cancel-label=Abbrechen
 button-apply-label=Anwenden
-button-applyCurrentFilter-label=Suchen
-button-removeCurrentFilter-label=Filter löschen
 
 # Dialog Strings
 dialog-information-title=Information
 dialog-confirmation-title=Bestätigung
-dialog-cancel-creation-confirmation-header=Möchten Sie den Dialog wirklich abbrechen?
-dialog-apply-creation-confirmation-header=Möchten Sie wirklich anwenden?
-dialog-confirmation-header-delete=Möchten Sie das ausgewählte Objekt wirklich löschen?
-dialog-information-header-no-object-selected=Bitte zunächst zu löschendes Objekt auswählen.
-dialog-information-header-about=Dieses Programm ist ein Studentenprojekt der Vorlesung Programmierung 3 an der Hochschule für Technik und Wirtschaft des Saarlandes in Saarbrücken.\n\nEntwickelt von: Arthur Kelsch, Hagen Schackmann, Jens Thewes, Julian Quint, Lukas Raubuch und Michael Bös
-
-# Search Strings
-prompt-search-TextField=Suche...
-prompt-search-ComboBoxField=Feld auswählen
-prompt-search-ComboBoxComparator=Operator auswählen
-search-combobox-equals==
-search-combobox-greater=>
-search-combobox-smaller=<
-search-combobox-like=LIKE
-
-# Menubar Strings
-menubar-view-file=_Datei
-menubar-view-edit=_Bearbeiten
-menubar-view-help=_Hilfe
-menubar-operation-new=Neu
-menubar-operation-edit=Bearbeiten
-menubar-operation-delete=Löschen
-menubar-operation-close=Schließen
-menubar-operation-rent=Vermieten
-menubar-operation-about=Über
-menubar-operation-employees=Mitarbeiter
-menubar-operation-cars=Autos
-menubar-operation-rentals=Vermietungen
-menubar-operation-customers=Kunden
+dialog-cancel-confirmation-text=Möchten Sie wirklich abbrechen?
+dialog-apply-confirmation-text=Möchten Sie wirklich anwenden?
+dialog-delete-confirmation-text=Möchten Sie das ausgewählte Objekt wirklich löschen?
+dialog-delete-no-selection-text=Bitte zunächst zu löschendes Objekt auswählen!
+dialog-about-text=Dieses Programm ist ein Studentenprojekt der Vorlesung Programmierung 3 an der Hochschule für Technik und Wirtschaft des Saarlandes in Saarbrücken.\n\nEntwickelt von: Arthur Kelsch, Hagen Schackmann, Jens Thewes, Julian Quint, Lukas Raubuch und Michael Bös
 
 # Car Strings
 car-new-title-label=Neues Auto
 car-edit-title-label=Auto bearbeiten
 car-id-label=ID
 car-brand-label=Marke
-car-model-label=Modell
 car-category-label=Kategorie
 car-color-label=Farbe
-car-constructionYear-label=Baujahr
-car-drivenDistance-label=Gefahrene Distanz [km]
-car-gearBox-label=Getriebe
-car-horsePower-label=Leistung [PS]
-car-fuel-label=Kraftstoff
-car-doorCount-label=Anzahl Türen
-car-tires-label=Bereifung
-car-nextInspection-label=Nächste Inspektion
-car-vin-label=Fahrgestellnummer
-car-equipment-label=Ausstattung
+car-construction-year-label=Baujahr
+car-daily-rate-label=Tagessatz [\u20AC]
 car-defects-label=Mängel
-car-licenceNumber-label=Kennzeichen
-car-dailyRate-label=Tagessatz [\u20AC]
-car-parkingLot-label=Parkplatz
+car-door-count-label=Anzahl Türen
+car-driven-distance-label=Gefahrene Distanz [km]
+car-equipment-label=Ausstattung
+car-fuel-label=Kraftstoff
+car-gearbox-label=Getriebe
+car-horsepower-label=Leistung [PS]
+car-licence-number-label=Kennzeichen
+car-model-label=Modell
+car-next-inspection-label=Nächste Inspektion
+car-parking-lot-label=Parkplatz
+car-tires-label=Bereifung
+car-vin-label=Fahrgestellnummer
 
-car-gearBox-automatic-label=Automatik
-car-gearBox-manual-label=Schaltgetriebe
-car-gearBox-semiAutomatic-label=Halbautomatik
+car-gearbox-manual-label=Schaltgetriebe
+car-gearbox-semi-automatic-label=Halbautomatik
+car-gearbox-automatic-label=Automatik
 
-car-fuel-diesel-label=Diesel
-car-fuel-electric-label=Elektro
 car-fuel-gasoline-label=Benzin
+car-fuel-diesel-label=Diesel
 car-fuel-hybrid-label=Hybrid
+car-fuel-electric-label=Elektro
 
 # Customer Strings
 customer-new-title-label=Neuer Kunde
 customer-edit-title-label=Kunde anpassen
 customer-id-label=ID
-customer-firstName-label=Vorname
-customer-lastName-label=Nachname
-customer-email-label=Email
-customer-phoneNumber-label=Telefonnummer
-customer-dateOfBirth-label=Geburtsdatum
-customer-street-label=Straße
-customer-houseNumber-label=Hausnummer
 customer-city-label=Stadt
-customer-zipCode-label=PLZ
-customer-idNumber-label=Ausweisnummer
-customer-driverLicenseId-label=Führerscheinnummer
+customer-date-of-birth-label=Geburtsdatum
+customer-driver-license-id-label=Führerscheinnummer
+customer-email-label=Email
+customer-first-name-label=Vorname
+customer-house-number-label=Hausnummer
+customer-id-number-label=Ausweisnummer
+customer-last-name-label=Nachname
+customer-phone-number-label=Telefonnummer
+customer-street-label=Straße
+customer-zip-code-label=PLZ
 
 # Employee Strings
 employee-new-title-label=Neuer Angestellter
 employee-edit-title-label=Angestellten anpassen
 employee-id-label=ID
-employee-firstName-label=Vorname
-employee-lastName-label=Nachname
+employee-first-name-label=Vorname
+employee-last-name-label=Nachname
 employee-position-label=Position
 
 # Rental Strings
@@ -107,5 +107,5 @@ rental-car-label=Auto
 rental-customer-label=Kunde
 rental-employee-label=Mitarbeiter
 rental-end-label=Ende
-rental-extraCosts-label=Aufpreis
+rental-extra-costs-label=Aufpreis
 rental-note-label=Notiz
