--- a/src/main/resources/bundles/components_en.properties
+++ b/src/main/resources/bundles/components_en.properties
@@ -1,103 +1,103 @@
 # General Strings
 stage-title=Car Rental
 
+# Menubar Strings
+menubar-view-file=_File
+menubar-operation-cars=Cars
+menubar-operation-customers=Customers
+menubar-operation-employees=Employees
+menubar-operation-rentals=Rentals
+menubar-operation-close=Close
+menubar-view-edit=_Edit
+menubar-operation-new=New
+menubar-operation-edit=Edit
+menubar-operation-delete=Delete
+menubar-operation-rent=Rent
+menubar-view-help=_Help
+menubar-operation-about=About
+
+# Search Strings
+search-combobox-field-text=Choose field
+search-combobox-comparator-text=Choose comparator
+search-combobox-equals==
+search-combobox-greater=>
+search-combobox-smaller=<
+search-combobox-like=LIKE
+search-textfield-text=Search...
+
 # Button Strings
+button-search-label=Search
+button-clear-filter-label=Clear filter
 button-new-label=New...
 button-edit-label=Edit...
 button-delete-label=Delete...
 button-rent-label=Rent...
 button-cancel-label=Cancel
 button-apply-label=Apply
-button-applyCurrentFilter-label=Search
-button-removeCurrentFilter-label=Clear filter
 
 # Dialog Strings
 dialog-information-title=Information
 dialog-confirmation-title=Confirmation
-dialog-cancel-creation-confirmation-header=Do you really want to cancel the dialog?
-dialog-apply-creation-confirmation-header=Do you really want to apply?
-dialog-confirmation-header-delete=Do you really want to remove the selected object?
-dialog-information-header-no-object-selected=Please select an object to remove first.
-dialog-information-header-about=This program is a student project as part of the Programming 3 lecture at the University of Applied Sciences in Saarbrücken.\n\nDeveloped by: Arthur Kelsch, Hagen Schackmann, Jens Thewes, Julian Quint, Lukas Raubuch and Michael Bös
-
-# Search Strings
-prompt-search-TextField=Search...
-prompt-search-ComboBoxField=Choose field
-prompt-search-ComboBoxComparator=Choose comparator
-search-combobox-equals==
-search-combobox-greater=>
-search-combobox-smaller=<
-search-combobox-like=LIKE
-
-# Menubar Strings
-menubar-view-file=_File
-menubar-view-edit=_Edit
-menubar-view-help=_Help
-menubar-operation-new=New
-menubar-operation-edit=Edit
-menubar-operation-delete=Delete
-menubar-operation-close=Close
-menubar-operation-rent=Rent
-menubar-operation-about=About
-menubar-operation-employees=Employees
-menubar-operation-cars=Cars
-menubar-operation-rentals=Rentals
-menubar-operation-customers=Customers
+dialog-cancel-confirmation-text=Do you really want to cancel?
+dialog-apply-confirmation-text=Do you really want to apply?
+dialog-delete-confirmation-text=Do you really want to remove the selected object?
+dialog-delete-no-selection-text=Please select an object to remove first!
+dialog-about-text=This program is a student project as part of the Programming 3 lecture at the University of Applied Sciences in Saarbrücken.\n\nDeveloped by: Arthur Kelsch, Hagen Schackmann, Jens Thewes, Julian Quint, Lukas Raubuch and Michael Bös
 
 # Car Strings
 car-new-title-label=New Car
 car-edit-title-label=Edit Car
 car-id-label=ID
 car-brand-label=Brand
-car-model-label=Model
 car-category-label=Category
 car-color-label=Color
-car-constructionYear-label=Construction Year
-car-drivenDistance-label=Driven Distance [km]
-car-gearBox-label=Gearbox
-car-horsePower-label=Horsepower [PS]
-car-fuel-label=Fuel
-car-doorCount-label=Door Count
-car-tires-label=Tires
-car-nextInspection-label=Next Inspection
-car-vin-label=Vehicle Ident Number
-car-equipment-label=Equipment
+car-construction-year-label=Construction Year
+car-daily-rate-label=Daily Rate [\u20AC]
 car-defects-label=Defects
-car-licenceNumber-label=License Number
-car-dailyRate-label=Daily Rate [\u20AC]
-car-parkingLot-label=Parking Lot
+car-door-count-label=Door Count
+car-driven-distance-label=Driven Distance [km]
+car-equipment-label=Equipment
+car-fuel-label=Fuel
+car-gearbox-label=Gearbox
+car-horsepower-label=Horsepower [PS]
+car-licence-number-label=License Number
+car-model-label=Model
+car-next-inspection-label=Next Inspection
+car-parking-lot-label=Parking Lot
+car-tires-label=Tires
+car-vin-label=Vehicle Identification Number
 
-car-gearBox-automatic-label=Automatic
-car-gearBox-manual-label=Manual
-car-gearBox-semiAutomatic-label=Semi-Automatic
+car-gearbox-manual-label=Manual
+car-gearbox-semi-automatic-label=Semi-Automatic
+car-gearbox-automatic-label=Automatic
 
-car-fuel-diesel-label=Diesel
-car-fuel-electric-label=Electric
 car-fuel-gasoline-label=Gasoline
+car-fuel-diesel-label=Diesel
 car-fuel-hybrid-label=Hybrid
+car-fuel-electric-label=Electric
 
 # Customer Strings
 customer-new-title-label=New Customer
 customer-edit-title-label=Edit Customer
 customer-id-label=ID
-customer-firstName-label=First Name
-customer-lastName-label=Last Name
-customer-email-label=Email
-customer-phoneNumber-label=Phone Number
-customer-dateOfBirth-label=Date of Birth
-customer-street-label=Street
-customer-houseNumber-label=House Number
 customer-city-label=City
-customer-zipCode-label=Zip Code
-customer-idNumber-label=ID Number
-customer-driverLicenseId-label=Driver License ID
+customer-date-of-birth-label=Date of Birth
+customer-driver-license-id-label=Driver License ID
+customer-email-label=Email
+customer-first-name-label=First Name
+customer-house-number-label=House Number
+customer-id-number-label=ID Number
+customer-last-name-label=Last Name
+customer-phone-number-label=Phone Number
+customer-street-label=Street
+customer-zip-code-label=Zip Code
 
 # Employee Strings
 employee-new-title-label=New Employee
 employee-edit-title-label=Edit Employee
 employee-id-label=ID
-employee-firstName-label=First Name
-employee-lastName-label=Last Name
+employee-first-name-label=First Name
+employee-last-name-label=Last Name
 employee-position-label=Position
 
 # Rental Strings
@@ -107,5 +107,5 @@ rental-car-label=Car
 rental-customer-label=Customer
 rental-employee-label=Employee
 rental-end-label=End
-rental-extraCosts-label=Extra costs
+rental-extra-costs-label=Extra costs
 rental-note-label=Note
