Added method comments + removed unneccessary components strings

--- a/src/main/resources/bundles/components_de.properties
+++ b/src/main/resources/bundles/components_de.properties
@@ -45,8 +45,7 @@ dialog-delete-no-selection-text=Bitte zunächst zu löschendes Objekt auswählen!
 dialog-about-text=Dieses Programm ist ein Studentenprojekt der Vorlesung Programmierung 3 an der Hochschule für Technik und Wirtschaft des Saarlandes in Saarbrücken.\n\nEntwickelt von: Arthur Kelsch, Hagen Schackmann, Jens Thewes, Julian Quint, Lukas Raubuch und Michael Bös
 
 # Car Strings
-car-new-title-label=Neues Auto
-car-edit-title-label=Auto bearbeiten
+car-edit-title-label=Auto Konfiguration
 car-id-label=ID
 car-brand-label=Marke
 car-category-label=Kategorie
@@ -77,8 +76,7 @@ car-fuel-hybrid-label=Hybrid
 car-fuel-electric-label=Elektro
 
 # Customer Strings
-customer-new-title-label=Neuer Kunde
-customer-edit-title-label=Kunde anpassen
+customer-edit-title-label=Kunden Konfiguration
 customer-id-label=ID
 customer-city-label=Stadt
 customer-date-of-birth-label=Geburtsdatum
@@ -93,8 +91,7 @@ customer-street-label=Straße
 customer-zip-code-label=PLZ
 
 # Employee Strings
-employee-new-title-label=Neuer Angestellter
-employee-edit-title-label=Angestellten anpassen
+employee-edit-title-label=Angestellten Konfiguration
 employee-id-label=ID
 employee-first-name-label=Vorname
 employee-last-name-label=Nachname
