--- a/src/main/resources/bundles/components_en.properties
+++ b/src/main/resources/bundles/components_en.properties
@@ -45,8 +45,7 @@ dialog-delete-no-selection-text=Please select an object to remove first!
 dialog-about-text=This program is a student project as part of the Programming 3 lecture at the University of Applied Sciences in Saarbrücken.\n\nDeveloped by: Arthur Kelsch, Hagen Schackmann, Jens Thewes, Julian Quint, Lukas Raubuch and Michael Bös
 
 # Car Strings
-car-new-title-label=New Car
-car-edit-title-label=Edit Car
+car-edit-title-label=Car Configuration
 car-id-label=ID
 car-brand-label=Brand
 car-category-label=Category
@@ -77,8 +76,7 @@ car-fuel-hybrid-label=Hybrid
 car-fuel-electric-label=Electric
 
 # Customer Strings
-customer-new-title-label=New Customer
-customer-edit-title-label=Edit Customer
+customer-edit-title-label=Customer Configuration
 customer-id-label=ID
 customer-city-label=City
 customer-date-of-birth-label=Date of Birth
@@ -93,8 +91,7 @@ customer-street-label=Street
 customer-zip-code-label=Zip Code
 
 # Employee Strings
-employee-new-title-label=New Employee
-employee-edit-title-label=Edit Employee
+employee-edit-title-label=Employee Configuration
 employee-id-label=ID
 employee-first-name-label=First Name
 employee-last-name-label=Last Name
