Added internationalized Strings for Edit*View

--- a/src/main/resources/bundles/components_de.properties
+++ b/src/main/resources/bundles/components_de.properties
@@ -75,6 +75,24 @@ car-fuel-diesel-label=Diesel
 car-fuel-hybrid-label=Hybrid
 car-fuel-electric-label=Elektro
 
+car-no-valid-integer=(muss Integer sein)
+car-no-valid-brand=Kein gültiger Markenname
+car-no-valid-category=Kein gültiger Kategorienname
+car-no-valid-color=Kein gültiger Farbenname
+car-no-valid-construction-year=Kein gültiges Baujahr
+car-no-valid-daily-rate=Kein gültiger Tagessatz
+car-no-valid-door-count=Keine gültige Türenazahl
+car-no-valid-driven-distance=Keine gültige gefahrene Distanz
+car-no-valid-fuel=Keine Treibstoffart asugewählt
+car-no-valid-gearbox=Keine gültige Getriebeart ausgewählt
+car-no-valid-horsepower=Keine gültige PS Zahl
+car-no-valid-licence-number=Kein gültiges Kennzeichen
+car-no-valid-model=Kein gültiger Modellname
+car-no-valid-next-inspection=Keine gültige Nächste Inspektion
+car-no-valid-parking-lot=Kein gültiger Parkplatz
+car-no-valid-tires=Keine gültige Bereifung
+car-no-valid-vin=Keine gültige Fahrgestellnummer
+
 # Customer Strings
 customer-edit-title-label=Kunden Konfiguration
 customer-id-label=ID
@@ -90,12 +108,29 @@ customer-phone-number-label=Telefonnummer
 customer-street-label=Straße
 customer-zip-code-label=PLZ
 
+customer-no-valid-integer=(muss Integer sein)
+customer-no-valid-first-name=Kein gültiger Vorname
+customer-no-valid-last-name=Kein gültiger Nachname
+customer-no-valid-email-adress=Keine gültige Email Adresse
+customer-no-valid-phone-number=Keine gültige Telefon Nummer
+customer-no-valid-date-of-birth=Kein gültiges Geburtsdatum
+customer-no-valid-street-name=Kein gültiger Straßenname
+customer-no-valid-house-number=Keine gültige Hausnummer
+customer-no-valid-city-name=Kein gültiger Stadtname
+customer-no-valid-zip-code=Keine gültige Postleitzahl
+customer-no-valid-id-number=Keine gültige Ausweisnummer
+customer-no-valid-driver-license=Keine gültige Führerscheinnummer
+
 # Employee Strings
 employee-edit-title-label=Angestellten Konfiguration
 employee-id-label=ID
 employee-first-name-label=Vorname
 employee-last-name-label=Nachname
 employee-position-label=Position
+
+employee-no-valid-first-name=Kein gültiger Vorname
+employee-no-valid-last-name=Kein gültiger Nachname
+employee-no-valid-position=Kein gültiger Position
 
 # Rental Strings
 rental-id-label=ID
