--- a/src/main/resources/bundles/components_en.properties
+++ b/src/main/resources/bundles/components_en.properties
@@ -75,6 +75,24 @@ car-fuel-diesel-label=Diesel
 car-fuel-hybrid-label=Hybrid
 car-fuel-electric-label=Electric
 
+car-no-valid-integer=(must be an integer)
+car-no-valid-brand=No valid brand name
+car-no-valid-category=No valid category name
+car-no-valid-color=No valid color name
+car-no-valid-construction-year=No valid construction year
+car-no-valid-daily-rate=No valid daily rate
+car-no-valid-door-count=No valid door count
+car-no-valid-driven-distance=No valid driven distance
+car-no-valid-fuel=No selected fuel
+car-no-valid-gearbox=No selected gearbox
+car-no-valid-horsepower=No valid horse power
+car-no-valid-licence-number=No valid licence number
+car-no-valid-model=No valid model name
+car-no-valid-next-inspection=No valid next inspection
+car-no-valid-parking-lot=No valid parking lot
+car-no-valid-tires=No valid tires name
+car-no-valid-vin=No valid VIN
+
 # Customer Strings
 customer-edit-title-label=Customer Configuration
 customer-id-label=ID
@@ -90,12 +108,29 @@ customer-phone-number-label=Phone Number
 customer-street-label=Street
 customer-zip-code-label=Zip Code
 
+customer-no-valid-integer=(must be integer)
+customer-no-valid-first-name=No valid first name
+customer-no-valid-last-name=No valid last name
+customer-no-valid-email-adress=No valid email adress
+customer-no-valid-phone-number=No valid phone number
+customer-no-valid-date-of-birth=No valid date of birth
+customer-no-valid-street-name=No valid street name
+customer-no-valid-house-number=No house number
+customer-no-valid-city-name=No city name
+customer-no-valid-zip-code=No valid zip code
+customer-no-valid-id-number=No valid ID Number
+customer-no-valid-driver-license=No valid driver license number
+
 # Employee Strings
 employee-edit-title-label=Employee Configuration
 employee-id-label=ID
 employee-first-name-label=First Name
 employee-last-name-label=Last Name
 employee-position-label=Position
+
+employee-no-valid-first-name=No valid first name
+employee-no-valid-last-name=No valid last name
+employee-no-valid-position=No valid position
 
 # Rental Strings
 rental-id-label=ID
