--- a/src/main/resources/bundles/components_en.properties
+++ b/src/main/resources/bundles/components_en.properties
@@ -111,7 +111,7 @@ customer-zip-code-label=Zip Code
 customer-no-valid-integer=(must be integer)
 customer-no-valid-first-name=No valid first name
 customer-no-valid-last-name=No valid last name
-customer-no-valid-email-adress=No valid email adress
+customer-no-valid-email-address=No valid email address
 customer-no-valid-phone-number=No valid phone number
 customer-no-valid-date-of-birth=No valid date of birth
 customer-no-valid-street-name=No valid street name
