Added missing internationalized String + Added StringBuilder

--- a/src/main/resources/bundles/components_de.properties
+++ b/src/main/resources/bundles/components_de.properties
@@ -38,10 +38,12 @@ button-apply-label=Anwenden
 # Dialog Strings
 dialog-information-title=Information
 dialog-confirmation-title=Bestätigung
+dialog-invalid-fields-title=Ungültige Felder
 dialog-cancel-confirmation-text=Möchten Sie wirklich abbrechen?
 dialog-apply-confirmation-text=Möchten Sie wirklich anwenden?
 dialog-delete-confirmation-text=Möchten Sie das ausgewählte Objekt wirklich löschen?
 dialog-delete-no-selection-text=Bitte zunächst zu löschendes Objekt auswählen!
+dialog-invalid-fields-text=Bitte korrigieren Sie ungültige Felder
 dialog-about-text=Dieses Programm ist ein Studentenprojekt der Vorlesung Programmierung 3 an der Hochschule für Technik und Wirtschaft des Saarlandes in Saarbrücken.\n\nEntwickelt von: Arthur Kelsch, Hagen Schackmann, Jens Thewes, Julian Quint, Lukas Raubuch und Michael Bös
 
 # Car Strings
@@ -87,11 +89,14 @@ car-no-valid-fuel=Keine Treibstoffart asugewählt
 car-no-valid-gearbox=Keine gültige Getriebeart ausgewählt
 car-no-valid-horsepower=Keine gültige PS Zahl
 car-no-valid-licence-number=Kein gültiges Kennzeichen
+car-no-valid-licence-number-duplicate=Es existiert bereits ein Auto mit diesem Kennzeichen
 car-no-valid-model=Kein gültiger Modellname
 car-no-valid-next-inspection=Keine gültige Nächste Inspektion
 car-no-valid-parking-lot=Kein gültiger Parkplatz
+car-no-valid-parking-lot-duplicate=Es steht breits ein Auto auf diesem Parkplatz
 car-no-valid-tires=Keine gültige Bereifung
 car-no-valid-vin=Keine gültige Fahrgestellnummer
+car-no-valid-vin-duplicate=Es existiert bereits ein Auto mit dieser Fahrgestellnummer
 
 # Customer Strings
 customer-edit-title-label=Kunden Konfiguration
@@ -119,7 +124,9 @@ customer-no-valid-house-number=Keine gültige Hausnummer
 customer-no-valid-city-name=Kein gültiger Stadtname
 customer-no-valid-zip-code=Keine gültige Postleitzahl
 customer-no-valid-id-number=Keine gültige Ausweisnummer
+customer-no-valid-id-number-duplicate=Es existiert bereits ein Kunde mit der Ausweisnummer
 customer-no-valid-driver-license=Keine gültige Führerscheinnummer
+customer-no-valid-driver-license-duplicate=Es existiert bereits ein Kunde mit der Führerscheinnummer
 
 # Employee Strings
 employee-edit-title-label=Angestellten Konfiguration
