--- a/src/main/resources/bundles/components_en.properties
+++ b/src/main/resources/bundles/components_en.properties
@@ -38,10 +38,12 @@ button-apply-label=Apply
 # Dialog Strings
 dialog-information-title=Information
 dialog-confirmation-title=Confirmation
+dialog-invalid-fields-title=Invalid Fields
 dialog-cancel-confirmation-text=Do you really want to cancel?
 dialog-apply-confirmation-text=Do you really want to apply?
 dialog-delete-confirmation-text=Do you really want to remove the selected object?
 dialog-delete-no-selection-text=Please select an object to remove first!
+dialog-invalid-fields-text=Please correct invalid fields!
 dialog-about-text=This program is a student project as part of the Programming 3 lecture at the University of Applied Sciences in Saarbrücken.\n\nDeveloped by: Arthur Kelsch, Hagen Schackmann, Jens Thewes, Julian Quint, Lukas Raubuch and Michael Bös
 
 # Car Strings
@@ -87,11 +89,14 @@ car-no-valid-fuel=No selected fuel
 car-no-valid-gearbox=No selected gearbox
 car-no-valid-horsepower=No valid horse power
 car-no-valid-licence-number=No valid licence number
+car-no-valid-licence-number-duplicate=There is already a car with this license number
 car-no-valid-model=No valid model name
 car-no-valid-next-inspection=No valid next inspection
 car-no-valid-parking-lot=No valid parking lot
+car-no-valid-parking-lot-duplicate=There is already a car with this parking lot
 car-no-valid-tires=No valid tires name
 car-no-valid-vin=No valid VIN
+car-no-valid-vin-duplicate=There is already a car with this VIN
 
 # Customer Strings
 customer-edit-title-label=Customer Configuration
@@ -119,7 +124,9 @@ customer-no-valid-house-number=No house number
 customer-no-valid-city-name=No city name
 customer-no-valid-zip-code=No valid zip code
 customer-no-valid-id-number=No valid ID Number
+customer-no-valid-id-number-duplicate=There is already a customer with this id number
 customer-no-valid-driver-license=No valid driver license number
+customer-no-valid-driver-license-duplicate=There is already a customer with this driver license id
 
 # Employee Strings
 employee-edit-title-label=Employee Configuration
