--- a/src/main/resources/bundles/components_de.properties
+++ b/src/main/resources/bundles/components_de.properties
@@ -93,7 +93,7 @@ car-no-valid-licence-number-duplicate=Es existiert bereits ein Auto mit diesem K
 car-no-valid-model=Kein gültiger Modellname
 car-no-valid-next-inspection=Keine gültige Nächste Inspektion
 car-no-valid-parking-lot=Kein gültiger Parkplatz
-car-no-valid-parking-lot-duplicate=Es steht breits ein Auto auf diesem Parkplatz
+car-no-valid-parking-lot-duplicate=Es steht bereits ein Auto auf diesem Parkplatz
 car-no-valid-tires=Keine gültige Bereifung
 car-no-valid-vin=Keine gültige Fahrgestellnummer
 car-no-valid-vin-duplicate=Es existiert bereits ein Auto mit dieser Fahrgestellnummer
