Renamed two components strings

--- a/src/main/resources/bundles/components_de.properties
+++ b/src/main/resources/bundles/components_de.properties
@@ -77,7 +77,7 @@ car-fuel-diesel-label=Diesel
 car-fuel-hybrid-label=Hybrid
 car-fuel-electric-label=Elektro
 
-car-no-valid-integer=(muss Integer sein)
+car-no-valid-integer=(muss eine Zahl sein)
 car-no-valid-brand=Kein gültiger Markenname
 car-no-valid-category=Kein gültiger Kategorienname
 car-no-valid-color=Kein gültiger Farbenname
@@ -113,7 +113,7 @@ customer-phone-number-label=Telefonnummer
 customer-street-label=Straße
 customer-zip-code-label=PLZ
 
-customer-no-valid-integer=(muss Integer sein)
+customer-no-valid-integer=(muss eine Zahl sein)
 customer-no-valid-first-name=Kein gültiger Vorname
 customer-no-valid-last-name=Kein gültiger Nachname
 customer-no-valid-email-address=Keine gültige Email Adresse
