--- a/src/main/resources/bundles/components_en.properties
+++ b/src/main/resources/bundles/components_en.properties
@@ -77,7 +77,7 @@ car-fuel-diesel-label=Diesel
 car-fuel-hybrid-label=Hybrid
 car-fuel-electric-label=Electric
 
-car-no-valid-integer=(must be an integer)
+car-no-valid-integer=(must be a number)
 car-no-valid-brand=No valid brand name
 car-no-valid-category=No valid category name
 car-no-valid-color=No valid color name
@@ -113,7 +113,7 @@ customer-phone-number-label=Phone Number
 customer-street-label=Street
 customer-zip-code-label=Zip Code
 
-customer-no-valid-integer=(must be integer)
+customer-no-valid-integer=(must be a number)
 customer-no-valid-first-name=No valid first name
 customer-no-valid-last-name=No valid last name
 customer-no-valid-email-address=No valid email address
