added Search-function + fill RentalEditView, ....

--- a/src/main/resources/bundles/components_de.properties
+++ b/src/main/resources/bundles/components_de.properties
@@ -141,3 +141,14 @@ rental-employee-label=Mitarbeiter
 rental-end-label=Ende
 rental-extra-costs-label=Aufpreis
 rental-note-label=Notiz
+
+rental-no-valid-driver-license-id=Keine gültige Führerschein Nummer
+rental-no-valid-first-name=Kein gültiger Vorname
+rental-no-valid-last-name=Kein gültiger Nachname
+rental-no-valid-email-address=Keine gültige Email Adresse
+rental-no-valid-street-name=Kein gültiger Straßen Name
+rental-no-valid-house-number=Keine gültige Haus Nummer
+rental-no-valid-zip-code=Keine gültige Postleitzahl
+rental-no-valid-city-name=Kein gültiger Stadt Name
+rental-no-valid-date-of-birth=Kein gültiges Geburtsdatum
+rental-no-valid-phone-number=Keine gültige Telefon Nummer
