filled Duration- and SumLabel, added checks Fields and Date

--- a/src/main/resources/bundles/components_de.properties
+++ b/src/main/resources/bundles/components_de.properties
@@ -136,7 +136,7 @@ employee-position-label=Position
 
 employee-no-valid-first-name=Kein gültiger Vorname
 employee-no-valid-last-name=Kein gültiger Nachname
-employee-no-valid-position=Kein gültiger Position
+employee-no-valid-position=Keine gültige Position
 
 # Rental Strings
 rental-id-label=ID
@@ -147,3 +147,4 @@ rental-employee-label=Mitarbeiter
 rental-end-label=Ende
 rental-extra-costs-label=Aufpreis
 rental-note-label=Notiz
+rental-no-valid-date-duration=Kein gültiges Datum
