Sort i18n components constants & methods to reduce confusion

--- a/src/main/resources/bundles/components_de.properties
+++ b/src/main/resources/bundles/components_de.properties
@@ -147,4 +147,5 @@ rental-employee-label=Mitarbeiter
 rental-end-label=Ende
 rental-extra-costs-label=Aufpreis
 rental-note-label=Notiz
-rental-no-valid-date-duration=Kein gültiges Datum
+
+rental-no-valid-duration=Keine gültige Mietdauer
