--- a/src/main/resources/bundles/components_en.properties
+++ b/src/main/resources/bundles/components_en.properties
@@ -147,4 +147,5 @@ rental-employee-label=Employee
 rental-end-label=End
 rental-extra-costs-label=Extra costs
 rental-note-label=Note
-rental-no-valid-date-duration=No valid date duration
+
+rental-no-valid-duration=No valid rent duration
