--- a/src/main/resources/bundles/components_de.properties
+++ b/src/main/resources/bundles/components_de.properties
@@ -147,5 +147,9 @@ rental-employee-label=Mitarbeiter
 rental-end-label=Ende
 rental-extra-costs-label=Aufpreis
 rental-note-label=Notiz
+rental-duration-text= Tag(e)
+rental-currency= €
 
 rental-no-valid-duration=Keine gültige Mietdauer
+rental-no-valid-customer=Kein gültiger Kunde
+rental-no-valid-employee=Kein gültiger Mitarbeiter
