--- a/src/main/resources/bundles/components_en.properties
+++ b/src/main/resources/bundles/components_en.properties
@@ -147,5 +147,9 @@ rental-employee-label=Employee
 rental-end-label=End
 rental-extra-costs-label=Extra costs
 rental-note-label=Note
+rental-duration-text= Day(s)
+rental-currency= $
 
 rental-no-valid-duration=No valid rent duration
+rental-no-valid-customer=No valid customer
+rental-no-valid-employee=No valid employee
