Revert some changes + minor adjustments

--- a/src/main/resources/bundles/components_de.properties
+++ b/src/main/resources/bundles/components_de.properties
@@ -147,8 +147,9 @@ rental-employee-label=Mitarbeiter
 rental-end-label=Ende
 rental-extra-costs-label=Aufpreis
 rental-note-label=Notiz
-rental-duration-text= Tag(e)
-rental-currency= €
+
+rental-duration-label=Tag(e)
+rental-currency-label=\u20AC
 
 rental-no-valid-duration=Keine gültige Mietdauer
 rental-no-valid-customer=Kein gültiger Kunde
