Finish work on RentalEditViewController

--- a/src/main/resources/bundles/components_de.properties
+++ b/src/main/resources/bundles/components_de.properties
@@ -7,18 +7,18 @@ menubar-operation-cars=Autos
 menubar-operation-customers=Kunden
 menubar-operation-employees=Mitarbeiter
 menubar-operation-rentals=Vermietungen
-menubar-operation-close=Schließen
+menubar-operation-close=Schlieï¿½en
 menubar-view-edit=_Bearbeiten
 menubar-operation-new=Neu
 menubar-operation-edit=Bearbeiten
-menubar-operation-delete=Löschen
+menubar-operation-delete=Lï¿½schen
 menubar-operation-rent=Vermieten
 menubar-view-help=_Hilfe
-menubar-operation-about=Über
+menubar-operation-about=ï¿½ber
 
 # Search Strings
-search-combobox-field-text=Feld auswählen
-search-combobox-comparator-text=Operator auswählen
+search-combobox-field-text=Feld auswï¿½hlen
+search-combobox-comparator-text=Operator auswï¿½hlen
 search-combobox-equals==
 search-combobox-greater=>
 search-combobox-smaller=<
@@ -27,23 +27,24 @@ search-textfield-text=Suchen...
 
 # Button Strings
 button-search-label=Suchen
-button-clear-filter-label=Filter löschen
+button-clear-filter-label=Filter lï¿½schen
 button-new-label=Anlegen...
 button-edit-label=Bearbeiten...
-button-delete-label=Löschen...
+button-delete-label=Lï¿½schen...
 button-rent-label=Vermieten...
 button-cancel-label=Abbrechen
 button-apply-label=Anwenden
 
 # Dialog Strings
 dialog-information-title=Information
-dialog-confirmation-title=Bestätigung
-dialog-invalid-fields-title=Ungültige Felder
-dialog-cancel-confirmation-text=Möchten Sie wirklich abbrechen?
-dialog-delete-confirmation-text=Möchten Sie das ausgewählte Objekt wirklich löschen?
-dialog-delete-no-selection-text=Bitte zunächst zu löschendes Objekt auswählen!
-dialog-invalid-fields-text=Bitte korrigieren Sie ungültige Felder
-dialog-about-text=Dieses Programm ist ein Studentenprojekt der Vorlesung Programmierung 3 an der Hochschule für Technik und Wirtschaft des Saarlandes in Saarbrücken.\n\nEntwickelt von: Arthur Kelsch, Hagen Schackmann, Jens Thewes, Julian Quint, Lukas Raubuch und Michael Bös
+dialog-confirmation-title=Bestï¿½tigung
+dialog-invalid-fields-title=Ungï¿½ltige Felder
+dialog-cancel-confirmation-text=Mï¿½chten Sie wirklich abbrechen?
+dialog-delete-confirmation-text=Mï¿½chten Sie das ausgewï¿½hlte Objekt wirklich lï¿½schen?
+dialog-delete-no-selection-text=Bitte zunï¿½chst zu lï¿½schendes Objekt auswï¿½hlen!
+dialog-invalid-fields-text=Bitte korrigieren Sie ungï¿½ltige Felder
+dialog-invalid-number-text=(muss eine Zahl sein)
+dialog-about-text=Dieses Programm ist ein Studentenprojekt der Vorlesung Programmierung 3 an der Hochschule fï¿½r Technik und Wirtschaft des Saarlandes in Saarbrï¿½cken.\n\nEntwickelt von: Arthur Kelsch, Hagen Schackmann, Jens Thewes, Julian Quint, Lukas Raubuch und Michael Bï¿½s
 
 # Car Strings
 car-edit-title-label=Auto Konfiguration
@@ -53,8 +54,8 @@ car-category-label=Kategorie
 car-color-label=Farbe
 car-construction-year-label=Baujahr
 car-daily-rate-label=Tagessatz [\u20AC]
-car-defects-label=Mängel
-car-door-count-label=Anzahl Türen
+car-defects-label=Mï¿½ngel
+car-door-count-label=Anzahl Tï¿½ren
 car-driven-distance-label=Gefahrene Distanz [km]
 car-equipment-label=Ausstattung
 car-fuel-label=Kraftstoff
@@ -62,7 +63,7 @@ car-gearbox-label=Getriebe
 car-horsepower-label=Leistung [PS]
 car-licence-number-label=Kennzeichen
 car-model-label=Modell
-car-next-inspection-label=Nächste Inspektion
+car-next-inspection-label=Nï¿½chste Inspektion
 car-parking-lot-label=Parkplatz
 car-tires-label=Bereifung
 car-vin-label=Fahrgestellnummer
@@ -76,25 +77,24 @@ car-fuel-diesel-label=Diesel
 car-fuel-hybrid-label=Hybrid
 car-fuel-electric-label=Elektro
 
-car-no-valid-integer=(muss eine Zahl sein)
-car-no-valid-brand=Kein gültiger Markenname
-car-no-valid-category=Kein gültiger Kategorienname
-car-no-valid-color=Kein gültiger Farbenname
-car-no-valid-construction-year=Kein gültiges Baujahr
-car-no-valid-daily-rate=Kein gültiger Tagessatz
-car-no-valid-door-count=Keine gültige Türenazahl
-car-no-valid-driven-distance=Keine gültige gefahrene Distanz
-car-no-valid-fuel=Keine Treibstoffart asugewählt
-car-no-valid-gearbox=Keine gültige Getriebeart ausgewählt
-car-no-valid-horsepower=Keine gültige PS Zahl
-car-no-valid-licence-number=Kein gültiges Kennzeichen
+car-no-valid-brand=Kein gï¿½ltiger Markenname
+car-no-valid-category=Kein gï¿½ltiger Kategorienname
+car-no-valid-color=Kein gï¿½ltiger Farbenname
+car-no-valid-construction-year=Kein gï¿½ltiges Baujahr
+car-no-valid-daily-rate=Kein gï¿½ltiger Tagessatz
+car-no-valid-door-count=Keine gï¿½ltige Tï¿½renazahl
+car-no-valid-driven-distance=Keine gï¿½ltige gefahrene Distanz
+car-no-valid-fuel=Keine Treibstoffart asugewï¿½hlt
+car-no-valid-gearbox=Keine gï¿½ltige Getriebeart ausgewï¿½hlt
+car-no-valid-horsepower=Keine gï¿½ltige PS Zahl
+car-no-valid-licence-number=Kein gï¿½ltiges Kennzeichen
 car-no-valid-licence-number-duplicate=Es existiert bereits ein Auto mit diesem Kennzeichen
-car-no-valid-model=Kein gültiger Modellname
-car-no-valid-next-inspection=Keine gültige Nächste Inspektion
-car-no-valid-parking-lot=Kein gültiger Parkplatz
+car-no-valid-model=Kein gï¿½ltiger Modellname
+car-no-valid-next-inspection=Keine gï¿½ltige Nï¿½chste Inspektion
+car-no-valid-parking-lot=Kein gï¿½ltiger Parkplatz
 car-no-valid-parking-lot-duplicate=Es steht bereits ein Auto auf diesem Parkplatz
-car-no-valid-tires=Keine gültige Bereifung
-car-no-valid-vin=Keine gültige Fahrgestellnummer
+car-no-valid-tires=Keine gï¿½ltige Bereifung
+car-no-valid-vin=Keine gï¿½ltige Fahrgestellnummer
 car-no-valid-vin-duplicate=Es existiert bereits ein Auto mit dieser Fahrgestellnummer
 
 # Customer Strings
@@ -102,30 +102,29 @@ customer-edit-title-label=Kunden Konfiguration
 customer-id-label=ID
 customer-city-label=Stadt
 customer-date-of-birth-label=Geburtsdatum
-customer-driver-license-id-label=Führerscheinnummer
+customer-driver-license-id-label=Fï¿½hrerscheinnummer
 customer-email-label=Email
 customer-first-name-label=Vorname
 customer-house-number-label=Hausnummer
 customer-id-number-label=Ausweisnummer
 customer-last-name-label=Nachname
 customer-phone-number-label=Telefonnummer
-customer-street-label=Straße
+customer-street-label=Straï¿½e
 customer-zip-code-label=PLZ
 
-customer-no-valid-integer=(muss eine Zahl sein)
-customer-no-valid-first-name=Kein gültiger Vorname
-customer-no-valid-last-name=Kein gültiger Nachname
-customer-no-valid-email-address=Keine gültige Email Adresse
-customer-no-valid-phone-number=Keine gültige Telefon Nummer
-customer-no-valid-date-of-birth=Kein gültiges Geburtsdatum
-customer-no-valid-street-name=Kein gültiger Straßenname
-customer-no-valid-house-number=Keine gültige Hausnummer
-customer-no-valid-city-name=Kein gültiger Stadtname
-customer-no-valid-zip-code=Keine gültige Postleitzahl
-customer-no-valid-id-number=Keine gültige Ausweisnummer
+customer-no-valid-first-name=Kein gï¿½ltiger Vorname
+customer-no-valid-last-name=Kein gï¿½ltiger Nachname
+customer-no-valid-email-address=Keine gï¿½ltige Email Adresse
+customer-no-valid-phone-number=Keine gï¿½ltige Telefon Nummer
+customer-no-valid-date-of-birth=Kein gï¿½ltiges Geburtsdatum
+customer-no-valid-street-name=Kein gï¿½ltiger Straï¿½enname
+customer-no-valid-house-number=Keine gï¿½ltige Hausnummer
+customer-no-valid-city-name=Kein gï¿½ltiger Stadtname
+customer-no-valid-zip-code=Keine gï¿½ltige Postleitzahl
+customer-no-valid-id-number=Keine gï¿½ltige Ausweisnummer
 customer-no-valid-id-number-duplicate=Es existiert bereits ein Kunde mit der Ausweisnummer
-customer-no-valid-driver-license=Keine gültige Führerscheinnummer
-customer-no-valid-driver-license-duplicate=Es existiert bereits ein Kunde mit der Führerscheinnummer
+customer-no-valid-driver-license=Keine gï¿½ltige Fï¿½hrerscheinnummer
+customer-no-valid-driver-license-duplicate=Es existiert bereits ein Kunde mit der Fï¿½hrerscheinnummer
 
 # Employee Strings
 employee-edit-title-label=Angestellten Konfiguration
@@ -134,9 +133,9 @@ employee-first-name-label=Vorname
 employee-last-name-label=Nachname
 employee-position-label=Position
 
-employee-no-valid-first-name=Kein gültiger Vorname
-employee-no-valid-last-name=Kein gültiger Nachname
-employee-no-valid-position=Keine gültige Position
+employee-no-valid-first-name=Kein gï¿½ltiger Vorname
+employee-no-valid-last-name=Kein gï¿½ltiger Nachname
+employee-no-valid-position=Keine gï¿½ltige Position
 
 # Rental Strings
 rental-id-label=ID
@@ -151,6 +150,6 @@ rental-note-label=Notiz
 rental-duration-label=Tag(e)
 rental-currency-label=\u20AC
 
-rental-no-valid-duration=Keine gültige Mietdauer
-rental-no-valid-customer=Kein gültiger Kunde
-rental-no-valid-employee=Kein gültiger Mitarbeiter
+rental-no-valid-duration=Keine gï¿½ltige Mietdauer
+rental-no-valid-extra-costs=Keine gï¿½ltiger Aufpreis
+rental-no-valid-employee=Kein gï¿½ltiger Mitarbeiter
