--- a/src/main/resources/bundles/components_en.properties
+++ b/src/main/resources/bundles/components_en.properties
@@ -43,7 +43,8 @@ dialog-cancel-confirmation-text=Do you really want to cancel?
 dialog-delete-confirmation-text=Do you really want to remove the selected object?
 dialog-delete-no-selection-text=Please select an object to remove first!
 dialog-invalid-fields-text=Please correct invalid fields!
-dialog-about-text=This program is a student project as part of the Programming 3 lecture at the University of Applied Sciences in Saarbrücken.\n\nDeveloped by: Arthur Kelsch, Hagen Schackmann, Jens Thewes, Julian Quint, Lukas Raubuch and Michael Bös
+dialog-invalid-number-text=(must be a number)
+dialog-about-text=This program is a student project as part of the Programming 3 lecture at the University of Applied Sciences in Saarbrï¿½cken.\n\nDeveloped by: Arthur Kelsch, Hagen Schackmann, Jens Thewes, Julian Quint, Lukas Raubuch and Michael Bï¿½s
 
 # Car Strings
 car-edit-title-label=Car Configuration
@@ -76,7 +77,6 @@ car-fuel-diesel-label=Diesel
 car-fuel-hybrid-label=Hybrid
 car-fuel-electric-label=Electric
 
-car-no-valid-integer=(must be a number)
 car-no-valid-brand=No valid brand name
 car-no-valid-category=No valid category name
 car-no-valid-color=No valid color name
@@ -112,7 +112,6 @@ customer-phone-number-label=Phone Number
 customer-street-label=Street
 customer-zip-code-label=Zip Code
 
-customer-no-valid-integer=(must be a number)
 customer-no-valid-first-name=No valid first name
 customer-no-valid-last-name=No valid last name
 customer-no-valid-email-address=No valid email address
@@ -151,6 +150,6 @@ rental-note-label=Note
 rental-duration-label=Day(s)
 rental-currency-label=\u20AC
 
-rental-no-valid-duration=No valid rent duration
-rental-no-valid-customer=No valid customer
+rental-no-valid-duration=Please confirm the rent duration
+rental-no-valid-extra-costs=No valid extra costs
 rental-no-valid-employee=No valid employee
